# azure-cvm-guest-attestation

./: CMakeLists.txt  README.md  pre-requisites.sh
AttestationClient/: AttestationClientImpl.cpp  AttestationClientImpl.h  CMakeLists.txt  HclReportParser.h
AttestationClient/DynamicLibrary/: CMakeLists.txt
AttestationClient/include/: AttestationClient.h  AttestationLogger.h
LinuxTpm/: CMakeLists.txt
LinuxTpm/lib/: CMakeLists.txt
LinuxTpm/staticshim/: CMakeLists.txt
